--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -11,13 +11,13 @@
 <div class="container">
     <div class="row">
         <div class="col-lg-6">
-            <h3>Not all sharks are alike</h3>
-            <p>Though some are dangerous, sharks generally do not attack humans. Out of the 500 species known to researchers, only 30 have been known to attack humans.
+            <h3>Footer Info 1</h3>
+            <p>Footer information number one goes in this section
             </p>
         </div>
         <div class="col-lg-6">
-            <h3>Sharks are ancient</h3>
-            <p>There is evidence to suggest that sharks lived up to 400 million years ago.
+            <h3>Footer Info 2</h3>
+            <p>This is the second spot for footer inforamtion on the homepage
             </p>
         </div>
     </div>
