--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,3 +1,5 @@
+
+<div class='container'>
 <h2>Seach for you local represenatives</h2>
 
 <%= form_with(url: search_path, method: "get", local: true) do %>
@@ -11,3 +13,4 @@
     <%= @response['officials'] %>
   </div>
 <% end %>
+</div>
