--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -1,5 +1,5 @@
 @import "~bootstrap/scss/bootstrap";
-@import url("https://fonts.googleapis.com/css?family=Merriweather:400,700");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500&family=Open+Sans&display=swap");
 
 $white: white;
 $black: black;
@@ -11,7 +11,7 @@ $black: black;
 body {
   background: $black;
   color: $white;
-  font-family: "Merriweather", sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 h1,
 h2 {
